Import/Export enhancements
Signed-off-by: Simone Merli <simone.merli@codexcoop.it>

--- a/app/views/exports/_form_fonds.html.erb
+++ b/app/views/exports/_form_fonds.html.erb
@@ -10,7 +10,7 @@
         :'data-autocompletion-controller' => 'fonds',
         :'data-autocompletion-action' => 'list',
         :style => "width:600px;" %>
-      <%= hidden_field_tag :f, "", :id => "exports-fond-id-autocomplete" %>
+      <%= hidden_field_tag :target_id, "", :id => "exports-fond-id-autocomplete" %>
     </div>
   </div>
 <% end %>
