--- a/app/views/creators/show.html.erb
+++ b/app/views/creators/show.html.erb
@@ -136,7 +136,7 @@
 
     <tr>
       <th><%= t('creator_note')%></th>
-      <td><%= show_value(@creator.note) %></td>
+      <td><%= textilize(@creator.note) %></td>
     </tr>
 
     <tr>
